Bug 409978 - Double usage of Ctrl+Shift+V
Summary: Double usage of Ctrl+Shift+V
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-19 07:12 UTC by Matthias
Modified: 2019-07-20 13:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.61
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias 2019-07-19 07:12:02 UTC
SUMMARY

Both, Kate and Konsole (which is part of it, optionally) use this shortcut. 
I suggest changing that one in Kate, since it is already very established in all instances of Konsole. 

STEPS TO REPRODUCE
1. Go into Kate
2. Open Terminal
3. Try to paste something in by using the shortcut (Ctrl+Shift+V)
Comment 1 Nate Graham 2019-07-20 01:42:51 UTC
Personally I would agree. I can't tell you how many times I've accidentally entered vi mode in Kate due to muscle memory from using ctrl+shift+v in Konsole recently...
Comment 2 Nate Graham 2019-07-20 01:55:58 UTC
Here's a patch: https://phabricator.kde.org/D22574
Comment 3 Matthias 2019-07-20 13:23:00 UTC
Thanks a lot. Goes that upstream? I vote for it. Thanks Nate :)
Comment 4 Nate Graham 2019-07-20 13:35:39 UTC
Git commit 0fb0e618bb0cd7a49c782d0ef28e64d57adcf010 by Nate Graham.
Committed on 20/07/2019 at 13:35.
Pushed by ngraham into branch 'master'.

Re-map default "Switch input mode" shortcut to not confict with konsolepart

Summary:
kateview's "Switch input mode" feature is currently bound to {key Ctrl Shift V}. This
causes two problems:
1. When the embedded konsolepart is visible, both it and Kate claim the same shortcut so neither one works
2. At other times, it's easily possible to accidentally enter vi mode when you mean to paste due to residual muscle memory from having pasted test in Konsole recently

For these reasons, this patch changes the default shortcut to {key Ctrl Alt V}, which
is also kind of more elegant anyway since it now uses the {key Alt} key and triggers
alternate input modes.
FIXED-IN: 5.61

Test Plan:
1. Compile
2. Open Kate
3. Hit {key Ctrl Shift V} and see that nothing happens
4. Copy some text
5. Open embedded Konsole and paste text with {key Ctrl Shift V} and see that it works
6. Hit {key Ctrl Alt V} and see that it enters vi mode

Reviewers: #kate, #ktexteditor, cullmann

Reviewed By: #kate, #ktexteditor, cullmann

Subscribers: cullmann, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D22574

M  +1    -1    src/view/kateview.cpp

https://commits.kde.org/ktexteditor/0fb0e618bb0cd7a49c782d0ef28e64d57adcf010