Re-map default "Switch input mode" shortcut to not confict with konsolepart

Summary:
kateview's "Switch input mode" feature is currently bound to {key Ctrl Shift V}. This
causes two problems:
1. When the embedded konsolepart is visible, both it and Kate claim the same shortcut so neither one works
2. At other times, it's easily possible to accidentally enter vi mode when you mean to paste due to residual muscle memory from having pasted test in Konsole recently

For these reasons, this patch changes the default shortcut to {key Ctrl Alt V}, which
is also kind of more elegant anyway since it now uses the {key Alt} key and triggers
alternate input modes.

BUG: 409978
FIXED-IN: 5.61

Test Plan:
1. Compile
2. Open Kate
3. Hit {key Ctrl Shift V} and see that nothing happens
4. Copy some text
5. Open embedded Konsole and paste text with {key Ctrl Shift V} and see that it works
6. Hit {key Ctrl Alt V} and see that it enters vi mode

Reviewers: #kate, #ktexteditor, cullmann

Reviewed By: #kate, #ktexteditor, cullmann

Subscribers: cullmann, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D22574